# single-stage-to-jupyter

./: .gitignore  CNAME  README.md  create_command.sh  initialize_repo.ps1  initialize_repo.sh  install_and_sync.sh  pyproject.toml
.github/workflows/: deploy-pages.yml
data/: demo_data.csv
dl-util/: CNAME  README.template  demo_analysis.ipynb.template  demo_analysis.py.template  dl.ps1  dl.ps1.template  dl.sh  dl.sh.template  index.html  install_and_sync.ps1  install_and_sync.sh  repo_url.txt  reset_to_template.sh
src/: data-analysis.ipynb
