[project]
name = "single-stage-to-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.4",
]

[dependency-groups]
dev = ["ipykernel>=7.0.1"]
